<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_home"
            android:title="@string/reports" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_icon"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_leave"
            android:title="@string/logout" />
        <item
            android:id="@+id/nav_purity_report_list"
            android:icon="@drawable/ic_leave"
            android:title="@string/purity_list" />
    </group>
</menu>