<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location_label"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location_layout"
        android:layout_below="@id/location_label"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/latitude_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            android:hint="Latitude"
            />
        <EditText
            android:id="@+id/longitude_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            android:hint="Longitude"
            />

    </LinearLayout>

    <TextView
        android:text="@string/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/type_label"
        android:layout_below="@id/location_layout"
        android:layout_marginTop="16dp"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/type_spinner"
        android:layout_below="@id/type_label"
        />

    <TextView
        android:text="@string/condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/condition_label"
        android:layout_below="@id/type_spinner"
        android:layout_marginTop="16dp"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/condition_spinner"
        android:layout_below="@id/condition_label"
        />

    <Button
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_report"
        android:onClick="submitReportButtonPressed"
        android:layout_below="@id/condition_spinner"
        />

    <Button
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_report"
        android:onClick="cancelReportButtonPressed"
        android:layout_below="@id/submit_report"
        />


</RelativeLayout>