<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/location_layout"-->
    <!--android:layout_below="@id/location_label"-->
    <!--&gt;-->

    <!--<ImageButton-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--app:srcCompat="@drawable/ic_location"-->
    <!--android:id="@+id/current_location"-->
    <!--android:onClick="currentLocationButtonPressed"-->
    <!--android:contentDescription="@string/current_location"-->
    <!--android:layout_weight="1"-->
    <!--/>-->

    <!--<ImageButton-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--app:srcCompat="@drawable/ic_map_icon"-->
    <!--android:onClick="pickLocationButtonPressed"-->
    <!--android:contentDescription="@string/pick_location_on_map"-->
    <!--android:id="@+id/pick_location"-->
    <!--android:layout_weight="1"-->
    <!--/>-->

    <!--</LinearLayout>-->

    <LinearLayout
        android:id="@+id/latitude_longitude_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/PPM_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ppm"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <EditText
            android:id="@+id/virus_PPM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Virus PPM"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/contaminant_PPM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Contaminant PPM"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Button
        android:id="@+id/submit_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="submitPurityReportButtonPressed"
        android:text="@string/submit"
        android:layout_above="@+id/cancel_report"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_report"
        android:onClick="cancelReportButtonPressed"
        android:layout_marginBottom="7dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/condition_label"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_below="@+id/latitude_longitude_entry"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/purity_condition_spinner"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/condition_label"
        android:layout_alignParentStart="true" />


</RelativeLayout>